--- a/_posts/2019-08-03-工作遇到的问题小结.md
+++ b/_posts/2019-08-03-工作遇到的问题小结.md
@@ -7,228 +7,11 @@ author:
 header-img: 
 catalog: true
 tags:
-    - < 微信小程序的学习 >
+    - < 工作遇到的问题记录 >
 typora-root-url: ..
 ---
 
-# 工作遇到的问题小结（实习）
-
-## vue element UI 组件相关问题
-
-### 1.`el-upload` 导入excel
-
-`element UI`组件，进行upload上传excel导入功能的时候，`on-success`/`before-upload`等钩子函数，要写在实例对象的`methods`中，才能够正常调用，否则会报`undefined in render` 的错。
-
-### 2.`el-tree` 树形控件
-
-`ElementUI Tree` 树形控件` https://blog.csdn.net/qq_42255106/article/details/80753096 ` 写的很细
-
-有关element UI 中树形组件 `el-tree` 实现各个节点多选功能
-
-```html
-<!-- 在html中写的标签结构 -->
-<el-tree
-    :data="groupTreeData"
-    show-checkbox
-    ref="DeviceGroupTree"
-    node-key="id"
-    check-strictly
-    @check="checkGroupNode">
-</el-tree>
-```
-
-其中每一项的配置解析如下：
-
-```javascript
-/*	:data树形结构的数据
-	show-checkbox 显示复选框
-	ref的绑定 可以实现this.$refs.DeviceGroupTree拿到此控件
-	node-key 给节点的编号【树形数据结构中有id字段】
-	check-stricty 父、子节点之间没有关联【不写这个，选了父节点会默认选择全部的子节点】
-	@check 复选框选择、取消选择时触发的事件 */
-```
-
-在JS中写的代码：
-
-```javascript
-// 在script标签中写方法
-checkGroupNode: function (a, b) {
-    if (b.checkedKeys.length > 0) {
-     this.$refs.DeviceGroupTree.setCheckedKeys([a.id]);
-    }
-}
-```
-
-### 3.`el-input` 文字提醒
-
-在做输入文字提醒的时候，可以使用三级列表形式提醒，使用的是`element`中的`el-input` 和`el-tree` ，如果想要直接以数据形式提醒的话，可以使用element当中的`el-autocomplete`。
-
-### 4. element UI版本更新
-
-在使用`element`文档内提供的组件的时候，如果使用之后发现有些功能无效，注意检查`element UI`的版本，可能是更新的属性。
-
-更新升级element UI的版本方法：
-
-```javascript
-// 接下来的代码都在终端中输入
- npm view element-ui versions // 查看可升级到的element UI的版本
- npm update element-ui //然后更新到最新的版本，如果要指定版本，就接@版本号
- npm run serve // 启动项目，这里启动用serve还是dev自行确认下
-```
-
-### 5. `el-cascader` 三级级联组件
-
-想要获取点击的内容时，可用` v-model="value"`来绑定，同时绑定事件`@change="handleChange"` 这样就可以在`methods`里面定义`handleChange`这个方法，同时传入value参数，进行数据处理。代码如下：
-
-```javascript
-// value 参数是标签中绑定的value值，作为参数传入
-// 这里是为了实现多级级联多选时候，选中的节点，只取最后一项内容保存在school中
-handleChange(value) {      
-    for (let item of value) {       
-        this.three.push(item[item.length - 1]);             
-    }  
-}
-```
-
-① 在级联中，options用于绑定数据，记得在标签里面**写的时候要加冒号**：；
-
-②`:props`绑定后，可以传入对象，重置value（id） label（name） 和children（arrayData）的变量名
-
-```javascript
-data:{
-	defaultprops:{
-        value:"id",
-        label:"name",
-        children:"arrayData"
-    }
-}
-```
-
-### 6. `el-table` 表格
-
-在`el-table`中，`scope.row`表示的是**一行的数据**，如果我想要输出一个数组中的每一个对象的值，如下，可以直接使用`{{scope.row.title}}`插槽即可。
-
-```json
-"items":[
-    {
-        "id":"2000001",
-        "school":"浙江大学",
-        "title":"前端开发",
-        "contnt":"HTML+CSS+JavaScript",
-        "detail":"计算机基础",
-        "adress":"VScode",
-        "likes":0,
-        "views":45,
-        "start":null,
-        "schoolsNames":[
-        	{
-        		"id":"3000001",
-        		"name":"华南理工",
-        		"sort":2,
-        		"likes":2,
-        		"views":4,
-        		"child":0,
-        		"friends":9
-    		},{},{}
-        ]
-    },{}
-]
-```
-
-若对象中有数组，数组中以对象形式罗列，如上`person`数组，那么若要循环输出数组中的键值对，那么就要在这一行建立`template`，设置`slot-scope=“scope”`，在template里写个div,span都可以，用来承载`v-for`语句。
-
-```html
-<el-table-column prop="schoolsNames" label="学校"  show-overflow-tooltip > 
-    <template scope="scope">  
-        <span v-for="schoolsName in scope.row.schoolsNames" :key="schoolsName.id"> 								<span>{{ schoolsName.name }}</span >  
-		</span>  
-	</template> 
-</el-table-column>
-```
-
-### 7.`el-menu ` 左侧导航
-
- 1.要实现路由跳转，**先要在el-menu标签上添加router属性**，然后只要在每个**el-menu-item标签内的index属性**设置一下`url`即可实现点击el-menu-item实现路由跳转。
-
-2.导航当前项设置：在el-menu标签中绑定 ` :default-active="$route.path"`,注意是绑定属性，不要忘了加`“:”`,当`$route.path`等于el-menu-item标签中的index属性值时则该item为当前项。
-
-```html
-        <el-menu 
-                 router 
-                 :default-active="$route.path" 
-                 @open="handleOpen"
-                 @close="handleClose" >
-            <el-submenu index="1">
-                <template slot="title">
-                    <i class="el-icon-location"></i>
-                    <span>信息</span>
-                </template>
-                <el-menu-item-group>
-                    <el-menu-item index="/user/account">账号</el-menu-item>
-                    <el-menu-item index="/user/password">密码</el-menu-item>
-            </el-submenu>
-            <el-submenu index="2">
-                <template slot="title">
-                    <i class="el-icon-location"></i>
-                    <span>信息</span>
-                </template>
-                <el-menu-item-group>
-                    <el-menu-item index="/company/manager">管理</el-menu-item>
-                    <el-menu-item index="/company/edit">添加</el-menu-item>
-                </el-menu-item-group>
-            </el-submenu>
-        </el-menu>
-```
-
-### 8. `el-form` 发布框必填/验证
-
-①流程：在对发布框进行必填操作时，**先在 el-form 标签中 ，绑定rules**；然后在各个el-form-item标签中，**写prop属性，来匹配rules**；最后**在data中定义rules对应的验证**；
-
-在rules中定义一个可以**验证 输入内容是否是数字的输入框**：
-
- ②其中一定要注意`v-model.number`绑定值的时候，绑定了number
-
-```html
-<el-form-item            
-              label="积分"            
-              prop="productPrice"            
-              :step="1"            
-              step-strictly            
-              class="product_price">            
-    <el-input 
-              placeholder="请输入积分" 
-              type="productPrice" 
-              v-model.number="activityForm.productPrice" ><!--注意这里的v-model-->        
-        <template slot="append">积分</template>            
-    </el-input>          
-</el-form-item>
-```
-
-```javascript
-//  rules里面填写
-productPrice: [          
-    { type: 'number', message: "必须为数字值", trigger: "blur" },          
-    { required: true, message: "请输入积分", trigger: "blur" }        
-],  
-```
-
-③在验证的时候，**一定要把prop绑定的类别放置在父级**。如果跨开一级，就会一直失败
-
-```html
-<el-form-item label="类别" >              
-    <el-select  
-               prop="type" 
-               v-model="Type" >                
-        <el-option                  
-                   v-for="item in List"                  
-                   v-model="item.Name"                  
-                   :key="item.Id">
-        </el-option>              
-    </el-select>            
-</el-form-item>
-```
-
-
+# 工作遇到的问题小结
 
 ## 遇到的报错总结
 
@@ -369,153 +152,7 @@ export const getInfo = (params) => {
 
 
 
-## 动态生成二维码问题
 
-### 1. 动态生成二维码
-
-先在终端中安装
-
-```css
-npm install qrcodejs2
-```
-
-然后在要生成二维码的页面中调用
-
-```javascript
-import QRCode from 'qrcodejs2'
-```
-
-然后在要展示二维码的结构处，为结构添加class属性
-
-```html
-<div class="qrcode" ref="qrCodeUrl"></div>
-```
-
-然后在`script`标签中添加方法
-
-```javascript
-creatQrCode() { // 创建一个实例对象
-	var  qrcode = new QRCode(this.$refs.qrCodeUrl, {
-	text: 'https://www.qtshe.com',
-	width: 100,height: 100,colorDark: '#000000',colorLight: '#ffffff',     
-	correctLevel: QRCode.CorrectLevel.H 
-    })
-},  
-```
-
-到此为止，二维码的功能代码已经写完，但是最后一个方法是需要调用的，否则就没有效果。
-
-如果是在页面点击进来就要显示的话，就去`mounted(){}`钩子里面调用一下`this.creatQrCode();`，
-
-如果是点击某个按钮等触发事件出现二维码的，只要在触发事件中绑定该方法即可。
-
-### 2.在二级弹窗中显示二维码
-
-①如果使用对话框显示二维码，有时会由于`html`元素还没有创建，导致生成二维码时报对象不存在或者`appenchild`方法未定义的错误。这时可以**使用`nextTick`来处理**。
-
-```javascript
-showQRCode(){      
-    this.$nextTick(()=>{/* 使用了nextTick之后，会在生成DOM元素之后绑定*/  
-        var qrcode = new QRCode(this.$refs.qrcodeContainer, {              
-            text: 'https://wallimn.iteye.com',              
-            width: 100,              
-            height: 100,              
-            colorDark: '#000000',              
-            colorLight: '#ffffff',              
-            correctLevel: QRCode.CorrectLevel.H          
-        })      }  }  
-```
-
-②定义完方法后，**只在点击出现对话框的时候，调用`showQRCode`的方法**即可；可以不用在mounted里面进行调用。
-
-③多次**点击会出现多个二维码**，这个时候要设置`this.$refs.qrCodeUrl.innerHTML='';`，保证每一次点击重新生成二维码之前，都已经将之前的清除了；
-
-④在跳转前的页面 设置的地址如下` text:"'/qrcode/' + id " `, 到了跳转到的页面，可以通过**`this.$route.params.id `获取到`url`中的id值**
-
-
-
-## 路由相关配置
-
-### 1.配置路由地址
-
-在`router.js`文件中配置路由地址的时候，使用的是`vue-router`，只要写在`home`下面的，都可以通用`header`和`footer`，如果有页面不想要的话，就要把路由地址**放到外面去**。
-
-```javascript
-//`router.js`文件中
-import Vue from "vue";
-import Router from "vue-router";
-Vue.use(Router);
-export default new Router({  
-    routes: [{      
-        path: "/",      
-        name: "home",      
-        component: () => import('@/pages/homes/homeIndex/index.vue'),      
-        redirect: {        
-        	name: 'list'      
-    	},      
-         children: [{          
-             path: "/list",          
-             name: "list",          
-             component: () => import('@/pages/homes/list/index.vue'),        
-		},...
-        //下面都是按照list的配置进行路由配置
-```
-
-如果需要验证登陆后才可以点击查看页面的话，增加一个判断条件：
-
-```javascript
-{          
-    path: "/home",          
-    name: "home",          
-    meta: {            
-          isAuth: true          
-    },          
-    component: () => import('@/pages/homes/home/index.vue'),        
-},
-```
-
-### 2. `Vue2.0`中$router 和 $route的区别
-
- ①.router是`VueRouter`的一个对象，通过`Vue.use(VueRouter)`和`VueRouter`构造函数得到一个router的实例对象，这个对象中是一个**全局的对象**，他**包含了所有的路由包含了许多关键的对象和属性**。**$router**对象是全局路由的实例，是router构造方法的实例。`$router.push({path:'home'});`本质是向history栈中添加一个路由，在我们看来是 切换路由，但本质是在添加一个history记录。
-
-路由实例方法：
-
-replace方法 `$router.replace({path:'home'});`//替换路由，没有历史记录，一般使用replace来做404页面 `this.$router.replace('/')`。
-
-还有push方法 ，push方法其实和`<router-link :to="...">`是等同的。注意：push方法的跳转会向 history 栈添加一个新的记录，当我们点击浏览器的返回按钮时可以看到之前的页面。
-
-还有go方法，`this.$router.go(-1) `// 后退         
-
-②.route是一个跳转的路由对象，每一个路由都会有一个route对象，是一个**局部的对象**，可以获取对应的`name,path,params,query`等
-我们可以从`vue devtools`中看到每个路由对象的不同。
-
-`$route.path `字符串，等于当前路由对象的路径，会被解析为**绝对路径**，如 "/home/news" 。`$route.params `对象，包含路由中的动态片段和全匹配片段的**键值对**。
-
-`$route.query `对象，包含路由中查询参数的键值对。例如，对于` /home/news/detail/01?favorite=yes `，会得到`$route.query.favorite == 'yes'` 。
-
-`$route.router` 路由规则所属的路由器（以及其所属的组件）。
-
-`$route.matched `数组，包含当前匹配的路径中所包含的所有片段所对应的**配置参数对象**。`$route.name` 当前路径的名字，如果没有使用具名路径，则名字为空。
-
-### 3.在`router.js`中配置相同页面不同id的地址
-
-在`router.js`配置地址的时候，想要配置一个**不同id显示相同类别的页面**，
-
-```javascript
-// 这是正常页面跳转配置
-{          
-    path: "/Detail",          
-    name: "Detail",          
-    component: () => import('@/pages/Detail/index.vue'),        
-},   
-                
-//这是带有id传值的配置   
-{          
-    path: "/Detail/:id",   /*注意这里，加了一个/：id*/         
-    name: "Detail",          
-    component: () => import('@/pages/Detail/index.vue'),        
-},
-```
 
 
 
@@ -677,32 +314,26 @@ line-clamp: 2;
 word-break: break-all;
 ```
 
-### 8.获取本地登陆的id等信息的方法
+### 8.获取cookie中本地登陆的id等信息的方法
 
 ```javascript
-//方法1：   
-let loginInfo = JSON.parse(localStorage.getItem("loginInfo")); 
-//方法2：         
-let loginInfo = this.getLocalValue("loginInfo");
+let login =this.getCookie("login");     
+if (login) {        
+    //获取登陆信息         
+    let loginInfo = this.getLocalValue("loginInfo");        
+    // 和上面方法一样，反序列化，把字符串改成对象
+    let loginInfo =JSON.parse(localStorage.getItem("loginInfo"));        
+    //获取成员id         
+    let memberId=loginInfo.id;        
+    // 调用接口查询是否重复签到        
+    console.log(memberId);
 ```
+
+
 
 ### 9.`this.$message.success("签到成功"); `弹出签到成功
 
-
-
-## 其他经验积累
-
-### 1. 在线json校验工具
-
-后端接口调试返回数据的简便使用，非常好用，使用新版`http://www.bejson.com/`
-
-### 2.测试环境中， 记得按disable cache ，可以不留缓存
-
-
-
-## 第四周 实习经验分享
-
-### 1.间隙问题
+### 10.间隙问题
 
 ①上下间隙
 
@@ -736,242 +367,7 @@ let loginInfo = this.getLocalValue("loginInfo");
 
 **4.使用letter-spacing属性**，设置字符间距，在父级上面设置`style="letter-spacing:-800px"`**（letter-spacing的值无论是负多少都不会产生重叠）**
 
-
-
-### 2.`el-form`表单提交及表单数据重置
-
-```html
-  <el-form :model="dataForm" :inline="true" :rules="rules" label-position="left">
-        <el-form-item label="名称" prop="name">
-            <el-input v-model="dataForm.name"></el-input>
-        </el-form-item>
-        <el-form-item label="价格" prop="price">
-            <el-input v-model="dataForm.price"></el-input>
-        </el-form-item>
-        <el-form-item label="数量" prop="num">
-            <el-input v-model="dataForm.num"></el-input>
-        </el-form-item>
-        <el-form-item label="日期" prop="date">
-            <el-input v-model="dataForm.date"></el-input>
-        </el-form-item>
-        <el-button @click="Submit('dataForm')">提 交</el-button>
-        <el-button @click="giveSubmit('dataForm')">取 消</el-button>
-   </el-form>
-```
-
-表单提交的时候，如果点击取消，就需要把内部的数据重置，**流程**：
-
-1.先在`el-form`标签中，用`：model=“dataForm” `将所有的填写的内容保存在里面，
-
-2.然后在取消按钮上面绑定相应的取消方法 ：`<el-button @click="giveSubmit('dataForm')">取 消</el-button> ` ，同时将`dataForm`这个存储值的对象传入，
-
-3.最后在方法中定义： 利用`resetFields();`重置这个里面的数据
-
-```javascript
-giveSubmit(formName) {      
-    this.productDialog = false;   
-    this.$refs[formName].resetFields();    
-}, 
-```
-
-
-
-### 3.el-table 批量删除方法
-
-```javascript
-	delLists() {
-            var ids = this.$refs.multipleTable.selection;
-            var checks = [];
-            if (ids.length === 0) {
-                this.$message.warning("请选择");
-                return false;
-            } else {
-                for (let i in ids) {
-                    checks.push(ids[i].id);
-                }
-                var checkIds = checks.join("%");
-            }
-            this.$confirm("此操作将永久删除项数据, 是否继续?", "提示", {
-                    confirmButtonText: "确定",
-                    cancelButtonText: "取消",
-                    type: "warning"
-                })
-                .then(() => {
-                /*getDel是一个接收checkIds参数来删除的接口*/
-                    getDel(checkIds).then(res => {
-                        if (res.code === "success") {
-                            this.$message({
-                                type: "success",
-                                activity: "删除成功!"
-                            });
-                            /*删除之后，重新获取table展示的数据，对当前页面进行刷新*/
-                            this.getList();
-                        }
-                    });
-                })
-                .catch(() => {
-                    this.$message({
-                        type: "info",
-                        activity: "已取消删除"
-                    });
-                });
-        }
-```
-
-### 4.过滤器filter
-
-#### ①先简单了解一下过滤方法：
-
-`array.filter(function(currentValue,index,arr), thisValue)`  
-
-filter() 方法**创建一个新的数组**，新数组中的元素是通过检查指定数组中**符合条件的所有元素**，如果没有符合条件的元素则返回空数组；**不会对空数组进行检测**；不会改变原始数组。
-
-参数：**当前元素的值**`currentValue`必须；当前元素的**索引值**`index` 可选；当前元素属于的数组对象 `arr` 可选；
-
- thisValue  可选，表示对象作为该执行回调时使用，传递给函数，**用作 "this" 的值**。如果省略了 thisValue ，"this" 的值为 "undefined"  。      
-
-```javascript
-/*我使用到的场景*/
-res.data.items.filter(value=>{          
-    return value.isTrue===1        
-})
-```
-
-#### ②过滤器可在new Vue实例前注册全局的，也可以在组件上写局部过滤器。
-
-1.**全局过滤器**：
-
-```javascript
-/*过滤器名称global-Filter*/
-Vue.filter('globa-lFilter', function (value) {return value + "000"})
-```
-
-2.**组件过滤器（局部）**：
-
-```javascript
-filters:{
-    componentFilter:function(value){ return value + "111" }
-},
-```
-
-**注意**：全局注册时是`filter`，没有s的。而组件过滤器是`filters`，是有s的，否则过滤器是没有效果的。
-
-注册在局部的时候，一定**不要写在methods里面**，filter是一个与methods同级的，类似钩子一样的函数。
-
-3.在**计算属性中过滤**：
-
-```html
-<li v-for="item in filterlist">{{item}}</li> 
-```
-
-```javascript
-/*list是定义的一个数组*/ 
-computed: {      
-     filterlist () {           
-         return this.list.filter(function (number) {
-                    return number< 4                
-         })            
-     }     
- },
-```
-
-4.在**`methods`**里面的使用
-
-```html
-<li v-for="item in filterlistFun()">{{item}}</li>
-```
-
-```javascript
-/*list是定义的一个数组*/  		
-methods:{
-    filterlistFun(val){
-         return this.list.filter(function (number) {
-               return number < 4
-         })
-    }
-}
-```
-
-#### ③过滤器的使用方法
-
-1.在双花括号插值` {{ 'ok' | globalFilter }} ` 
-2.在`v-bind`表达式中使用 `<div v-bind:data="'ok' | globalFilter" ></div>`
-
-#### ④过滤器的参数写法
-
-1.**{{ message | filterA | filterB }}**  message是作为参数传给filterA 函数，而filterA 函数的返回值作为参数传给filterB函数，**最终结果显示是由filterB返回的**。调用的时候，只有一个参数。
-2.**{{ message | filterA('arg1', arg2) }}** filterA的第一个参数是message，然后接下来的参数依次是‘arg1’,arg2。调用的时候，有三个参数。
-3.**{{ 'a','b' | filterB }}** 'a'和'b'分别作为参数传给filterB。
-
-过滤器函数始终以表达式的值作为第一个参数。带引号的参数视为字符串，而**不带引号的参数按表达式计算** ；
-
-可以设置两个过滤器参数，前提是这**两个过滤器处理的不冲突**；
-
-
-
-### 5.el-table 的格式化属性
-
-用户从input输入的数据在回传到model之前也可以先处理；
-
-```html
-<el-table-column 
-                 label="状态" 
-                 align="center" 
-                 :formatter="switchCode" 
-                 show-overflow-tooltip></el-table-column>
-```
-
- 在表格中 有一个`formatter`用来格式化内容 `Function(row, column, cellValue, index) `
-**使用流程：**
-
-1.先在列中定义方法，给它一个方法名，它会自动获取参数；
-
-2.然后再methods里面定义该方法，并传入默认的参数，这里传两个参数，row参数获取了本行的数组
-
-```javascript
-// 订单状态    
-			switchCode(row, column) {
-                    let Status = "";
-                    switch (row.orderStatus) {
-                        case 1:
-                            Status = "已付款";
-                            break;
-                        case 2:
-                            Status = "已发货";
-                            break;
-                        case 3:
-                            Status = "已签收";
-                            break;
-                        case 4:
-                            Status = "取消交易";
-                            break;
-                    }
-                    return Status;
-                }
-```
-
-**注意**：过程中，我将需要返回的Status变量，一开始定义在data中，导致无限循环报错，将要返回的变量局部定义在该函数中即可避免；
-
-### 6.移动端轮播图抖动问题
-
-```css
-overflow：hidden;
-width：100%;
-height：0;
-padding-bottom：31.25%;
-```
-
-`padding-bottom：31.25%;`表示**高度根据宽度相对撑开31.25%**，保证图片的宽高比。
-**注意**：不能将height设置成31.25%，因为height是相对于父级的百分比。
-或者可以写成另一种形式：
-
-```css
-/*高度相对于viewport的宽度；但是可能有兼容性问题*/
-width：100%;
-height：31.25vm;
-```
-
-### 7.模板字面量
+### 11.模板字面量
 
 1.在模板字面量（反引号）之内的所有空白符都是字符串的一部分，因此需要**特别留意缩进**。　　　
 2.在模板字面量中**使用 \n 来指示换行**的插入位置。
@@ -1027,7 +423,7 @@ let message = passthru`${count} items cost $${(count * price).toFixed(2)}.`;
 
 **注意**：literals里的第一个元素是一个空字符串，这确保了literals[0]总是字符串的始端，就像literals[literals.length-1]总是字符串的结尾一样。substitutions的数量总比literals少一个，这也意味着表达式substitutions.Iength === literals.Iength-1的结果总为true。
 
-### 8.防抖、节流
+### 12.防抖、节流
 
 防抖、节流` https://segmentfault.com/a/1190000016261602 `这个写的很好，平时键盘抬起就会搜索，防抖后，间隔一段时间不输入才会搜索，节流后，可以做到不管是否停止打字，间隔一段时间都会搜索。
 
@@ -1136,7 +532,6 @@ setInterval(debounce(boom,2000),1000)
 
 - 函数防抖和函数节流都是防止某一时间频繁触发，但是这两兄弟之间的原理却不一样。
 - 函数防抖是某一段时间内只执行一次，而函数节流是间隔时间执行。
-
 - debounce
   - search搜索联想，用户在不断输入值时，用防抖来节约请求资源。
   - window触发resize的时候，不断的调整浏览器窗口大小会不断的触发这个事件，用防抖来让其只触发一次
@@ -1144,7 +539,7 @@ setInterval(debounce(boom,2000),1000)
   - 鼠标不断点击触发，mousedown(单位时间内只触发一次)
   - 监听滚动事件，比如是否滑到底部自动加载更多，用throttle来判断
 
-### 9.watch的使用
+### 13.watch的使用
 
 1.监听到变化，**执行方法**：
 
@@ -1202,96 +597,33 @@ watch: {
 }
 ```
 
-### 10.el-cascader中获取选中的内容
 
-在级联中，我要获得级联显示的内容，但是直接通过`v-model`、`:value`来绑定值，得到的是一个`[295,343,323]`，对应着dictionaryId值，但是我**想要的是label里面的值**，在官方文档里面没有提供获取label值的直接方法，所以要自己写。 
 
-首先，级联在html中是：
+## 其他经验积累
 
-```html
-<!-- 三级级联 -->                  
-<el-cascader                    
-             ref="Address"                    
-             :options="clubLists"                    
-             :props="props"                    
-             v-model="addressValue"                    
-             @change="handleareaChange"                    
-             style="width:350px"                    
-             clearable                  
-             ></el-cascader> 
+### 1. 在线json校验工具
+
+后端接口调试返回数据的简便使用，非常好用，使用新版`http://www.bejson.com/`
+
+### 2.测试环境中， 记得按disable cache ，可以不留缓存
+
+### 3.移动端轮播图抖动问题
+
+```css
+overflow：hidden;
+width：100%;
+height：0;
+padding-bottom：31.25%;
 ```
 
-其中，`clubLists`是通过接口获得到的级联的显示的数据，
+`padding-bottom：31.25%;`表示**高度根据宽度相对撑开31.25%**，保证图片的宽高比。
+**注意**：不能将height设置成31.25%，因为height是相对于父级的百分比。
+或者可以写成另一种形式：
 
-```javascript
-//级联学校列表    
-async getClubLists() {      
-    var res = await getArea();      
-    if (res.code === "success") {        
-        this.clubLists = res.data;      
-    }    
-},
-```
-
-`props`是级联数据中自定义的数据列表
-
-```javascript
-
-props: {        
-    value: "dictionaryId",        
-    label: "value",        
-    children: "childDomain"      
-};
-
-```
-
-`addressValue`是通过v-model绑定的选择的内容**（选中的dictionaryId值）**；
-`handleareaChange`是**更改选择后会触发的方法**；
-
-```javascript
-handleareaChange() {      
-    this.vals = this.getCascaderObj(this.addressValue, this.clubLists);    
-},
-```
-
- 这里调用了一个获取内容的方法`getCascaderObj`，选择变化之后，vals里面的值也会变化，将绑定的选中的id值和数据源传入该方法；
-
-```javascript
-// 获取级联中的内容    
-getCascaderObj(val, opt) {      
-    return val.map(function(value, index, array) {        
-        for (var itm of opt) {          
-            if (itm.dictionaryId == value) {            
-                opt = itm.childDomain;            
-                return itm;          
-            }        
-        }        
-        return null;      
-    });    
-},  
-```
-
-其中，传入的参数：`value`代表的是**当前选中的id值**，`index`表示的是**当前id值在选中的数组中的序号**，`array`代表了选中的三项的id数组，在opt遍历的itm表示**数据源中的数据**，如下图。
-
-![1566655598049](/img/assets_2019/1566655598049.png)
-
-通过`getCascaderObj`方法得到的vals数组是一个包含了源数组中id值的部分，所以要单独获得每一个选择的内容的话，要通过数组：` this.vals[0].value；this.vals[1].value；this.vals[2].value`
-
-![1566655586000](/img/assets_2019/1566655586000.png)
-
-### 11.获取cookie中的登录id
-
-```javascript
-let login =this.getCookie("login");     
-if (login) {        
-    //获取登陆信息         
-    let loginInfo = this.getLocalValue("loginInfo");        
-    // 和上面方法一样，反序列化，把字符串改成对象
-    let loginInfo =JSON.parse(localStorage.getItem("loginInfo"));        
-    //获取成员id         
-    let memberId=loginInfo.id;        
-    // 调用接口查询是否重复签到        
-    console.log(memberId);
+```css
+/*高度相对于viewport的宽度；但是可能有兼容性问题*/
+width：100%;
+height：31.25vm;
 ```
 
 
